tests/success/consteval_main.bz
function main()
{
}

function foo()
{
	(consteval main());
}
